# pacman

./: CMakeLists.txt  Makefile  pacman.cpp
src/: pacman.cpp
